# video_splitter

./: .gitignore  LICENSE.txt  README.md  ctk_widgets.py  i18n.py  main.py  pyproject.toml  utils.py  video_utils.py
tests/: test_main.py  test_utils.py  test_video_utils.py
