[project]
name = "video-splitter"
version = "0.15.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "customtkinter>=5.2.2",
    "opencv-python>=4.12.0.88",
    "pillow>=12.0.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-mock>=3.15.1",
    "unittest-xml-reporting>=3.2.0",
]
